syntax = "proto3";

package maple2.server.channel.service;

import "common.proto";
import "sync.proto";

// The channel service definition.
service Channel {
  // Send a chat message.
  rpc Chat(maple2.ChatRequest) returns (maple2.ChatResponse);
  // Manage buddy list.
  rpc Buddy(maple2.BuddyRequest) returns (maple2.BuddyResponse);
  // Update player info
  rpc UpdatePlayer(maple2.PlayerUpdateRequest) returns (maple2.PlayerUpdateResponse);
  // Manage guild.
  rpc Guild(GuildRequest) returns (GuildResponse);
  // Manage party.
  rpc Party(PartyRequest) returns (PartyResponse);
  // Manage group chat.
  rpc GroupChat(GroupChatRequest) returns (GroupChatResponse);

  // Notify character about new mail.
  rpc MailNotification(maple2.MailNotificationRequest) returns (maple2.MailNotificationResponse);
}

message GuildRequest {
  message Invite {
    string guild_name = 1;
    int64 sender_id = 2;
    string sender_name = 3;
  }
  message InviteReply {
    string name = 1;
    int32 reply = 2;
  }
  message AddMember {
    int64 character_id = 1;
    string requestor_name = 2;
    int32 rank = 3;
    int64 join_time = 4;
    int64 login_time = 5;
  }
  message RemoveMember {
    int64 character_id = 1;
    string requestor_name = 2;
  }
  message UpdateMember {
    int64 requestor_id = 1;
    int64 character_id = 2;
    optional int32 rank = 3;
    optional string message = 4;
  }

  int64 guild_id = 1;
  repeated int64 receiver_ids = 2;
  oneof Guild {
    Invite invite = 3;
    InviteReply invite_reply = 4;
    AddMember add_member = 5;
    RemoveMember remove_member = 6;
    UpdateMember update_member = 7;
  }
}

message GuildResponse {
  int32 error = 1;
}

message PartyRequest {
  message Invite {
    int64 sender_id = 1;
    string sender_name = 2;
  }
  message InviteReply {
    string name = 1;
    int32 reply = 2;
  }
  message AddMember {
    int64 character_id = 1;
    int64 join_time = 2;
    int64 login_time = 3;
  }
  message RemoveMember {
    int64 character_id = 1;
    bool is_kicked = 2;
  }
  message UpdateLeader {
    int64 character_id = 1;
  }
  message Disband {
    int64 character_id = 1;
  }

  int32 party_id = 1;
  repeated int64 receiver_ids = 2;
  oneof Party {
    Invite invite = 3;
    InviteReply invite_reply = 4;
    AddMember add_member = 5;
    RemoveMember remove_member = 6;
    UpdateLeader update_leader = 7;
    Disband disband = 8;
  }
}

message PartyResponse {
  int32 error = 1;
}

message GroupChatRequest {
  message Invite {
    string sender_name = 1;
    string receiver_name = 2;
  }

  message RemoveMember {
    int64 character_id = 1;
  }

  message AddMember {
    int64 requester_id = 1;
    string requester_name = 2;
    int64 character_id = 3;
  }

  message Chat {
    string requester_name = 1;
    string message = 2;
  }

  message Disband {
    int64 requester_id = 1;
  }

  int32 group_chat_id = 1;
  repeated int64 receiver_ids = 2;
  oneof GroupChat {
    Invite invite = 3;
    RemoveMember remove_member = 4;
    AddMember add_member = 5;
    Chat chat = 6;
    Disband disband = 7;
  }
}

message GroupChatInfo {
  message Member {
    int64 character_id = 1;
  }

  int32 id = 1;
  repeated Member members = 2;
}

message GroupChatResponse {
  int32 error = 1;
}
